# target_icp_registration

./: CMakeLists.txt  package.xml
config/: disparity_params_stereo.yaml
include/: icp_registration.h
launch/: run.launch  test.launch
src/: icp_registration.cpp  icp_registration_node.cpp
targets/: vertices14_z0_filt0.pcd  vertices14_z180_filt0.pcd
