<?xml version="1.0"?>
<package>
  <name>target_icp_registration</name>
  <version>0.0.1</version>
  <description>Find a 3D target into a pointcloud</description>


  <license>GPL</license>
  <author email="pl.negre@uib.es">Pep Lluis Negre Carrasco</author>
  <maintainer email="pl.negre@uib.es">Pep Lluis Negre Carrasco</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>

</package>
